# precision-signal

./: .gitattributes  .gitignore  BENCHMARK_GUIDE.md  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  TODAY_1_6_0.md  VERIFICATION_GUIDE.md  verify_kani.sh  verify_release_repro.sh
.github/agents/: docs-consistency.agent.md  repository-auditor.agent.md  repository-math-sanity.agent.md  repository-simplifier-auditor-agent.md  repository-simplifier-implementer.agent.md
.github/workflows/: actionlint.yml  ci.yml  opt_wasm.yml  pages.yml
artifacts/: baseline.json  baseline.sha256
artifacts/20260408T030154Z-4152ebf4f62c59ec/: result.txt
artifacts/20260408T030234Z-396aba74723b0538/: result.txt
artifacts/capture_contract_v1/: manifest.txt  validation.txt
artifacts/demo/: run_B.rpl
artifacts/demo_captured/: run_B.rpl
artifacts/demo_persistent/: run_B_captured.rpl
artifacts/demo_v3/: rate_B.rpl  transient_B.rpl
artifacts/demo_v4/: header_schema_B.rpl  header_schema_sample_payload_B.rpl  irq_state_B.rpl  mixed_B.rpl  sample_payload_B.rpl  timer_delta_B.rpl
artifacts/demo_v5/: monotonic_growth_A.rpl
artifacts/power_source_ab/: notes.txt
artifacts/rpl0/: manifest.txt  replay_equivalence_artifact_diff_perturbed.txt  replay_equivalence_commands.txt  replay_equivalence_hashes.txt  run_20260331T150000Z.import2.rpl
artifacts/stlink_capture_probe/: manifest.txt
boards/: stm32f446-stlink.toml
crates/audit-float-boundary/: Cargo.toml
crates/dpw4/: Cargo.toml  build.rs
crates/dpw4/examples/: chaos_audit.rs  generate_forensic_artifacts.rs  generate_hashes.rs  header_check.rs  rpi_spatial_animator.rs  rpi_spatial_orbit.rs  rpi_spatial_theremin.rs  rpi_spatial_traversal.rs  rpi_spatial_visualizer.rs  rpi_verify_analog.rs  rpi_verify_geometric.rs  rpi_verify_logic.rs  stress_test_long_run.rs  verify_nano_trace.rs
crates/dpw4/src/: checksum.rs  constants.rs  goldens.rs  header.rs  i256.rs  lib.rs  verification.rs
crates/dpw4/tests/: d03_runtime_probe.rs  forensic_audit.rs  kani_checksum.rs  precision_authoritative_surface.rs  precision_generate_streams.rs  sine_bounded_correctness.rs  sine_scaling_safety.rs  triangle_control_surface.rs  triangle_normative_drift.rs  triangle_phase_pump.rs
crates/geom-signal/: Cargo.toml
crates/geom-signal/benches/: signal_inner_loop.rs  trig_throughput.rs
crates/geom-signal/src/: algebraic.rs  lib.rs  math.rs  verification.rs
crates/geom-signal/tests/: stress_math.proptest-regressions  stress_math.rs
crates/geom-spatial/: Cargo.toml
crates/geom-spatial/examples/: spatial_bench.rs
crates/geom-spatial/src/: lib.rs
crates/geom-spatial/tests/: saturation_boundary.proptest-regressions  saturation_boundary.rs
crates/replay-cli/: Cargo.toml  README.md
crates/replay-core/: Cargo.toml  README.md
crates/replay-embed/: Cargo.toml  README.md
crates/replay-fw-f446/: Cargo.toml  README.md  build.rs
crates/replay-fw-f446-timing/: Cargo.toml  README.md  memory.x
crates/replay-fw-f446-timing/src/: main.rs
crates/replay-fw-f446/src/: artifact_metadata.rs  fw.rs  main.rs  signal_model.rs
crates/replay-fw-f446/tests/: host_stub.rs
crates/replay-host/: Cargo.toml
crates/replay-host/src/: artifact.rs  lib.rs  main.rs  replay.rs
crates/replay-host/tests/: artifact_parser.rs  corpus_parity.rs  operator_path.rs  replay_diff.rs
crates/xtask/: Cargo.toml
docs/: .deploy-trigger  BENCHMARK_GUIDE.md  CONTRIBUTING.md  DOCS_INDEX.md  MATH_CONTRACT.md  README.md  RELEASE_SURFACE.md  START_HERE.md  VERIFICATION_GUIDE.md  index.html  system_architecture_disclosure.md
docs/architecture/: architecture_whitepaper.md  float_boundary.md  replay_explained.md  repository_mapping.md  signal_path.md  system_surfaces.md  workspace.md
docs/archive/: README.md.bak
docs/audits/: AUDIT_CONVENTIONS.md  AUDIT_INDEX.md  P5_artifact_boundary.md  PRE_RELEASE_AUDIT.md  README.md  ci_pins.md  delta-02_gain-mantissa-invariance.md  delta-03_triangle-dpw4-integrity.md  delta-04_sine-quantizer-semantics.md  delta-bd_build-determinism.md  repository_health_1.2.2.md  repository_health_1.4.0.md  repository_health_1.5.0.md  repository_health_1.6.0.md  repository_health_baseline.md
docs/authority/: cli_contract.md
docs/cli/: examples.md  precision.md
docs/debug/: diagnostic_features.md  reset_run_characterization.md
docs/demos/: demo.md  demo_capture_perturbation.md  demo_captured_divergence.md  demo_claim_matrix.md  demo_evidence_packaging.md  demo_persistent_divergence.md  demo_v3_divergence_classification.md  demo_v4_region_attribution.md  demo_v5_evolution.md  demo_visual.html
docs/governance/: ARTIFACT_POLICY.md  DEBT.md  DESIGN_AXIOMS.md
docs/hardware/: REFERENCE_HARDWARE.md
docs/hil/: DUAL_BOARD_OBSERVER_EVIDENCE_WINDOW_ARMING.md  STM32_EXTI_SYNC_CANDIDATE.md  STM32_SYNC_TIMING_CAPTURE.md
docs/internal/: DOC_SYSTEM_CATEGORY_AUDIT.md  DOC_TERM_NORMALIZATION_PASS1.md
docs/notes/: power_characterization.md
docs/operations/: USB_WORKFLOW.md
docs/operator/: stm32_replay.md
scripts/: archive_firmware_evidence.py  artifact_diff.py  artifact_tool.py  bench_check.py  capture_prefix.py  capture_prefix_loop.py  capture_prefix_monitor.py  check_ci_pins.sh  check_doc_links.py  check_firmware_elf.py  check_flash_vectors.py  check_no_replay_backedges.py  check_release_bundle.py  compare_artifact.py  compare_flash_image.sh  csv_capture.py  fw_gate.py  generate_demo_v3_fixtures.py  generate_demo_v4_fixtures.py  generate_demo_v5_fixtures.py  hil_dual_observer_run.py  hil_timing_capture.py  inspect_artifact.py  interval_diff.py  lock_baseline.py  mutate_frame.py  package_demo_evidence.py  pi_emitter.py  power_sweep_run_log.py  read_artifact.py  release_bundle.py  release_bundle_guard_control_bytes.py  release_bundle_guard_stale.py  release_gate.py  release_summary.py  repeat_capture.py  replay_demo_audit.py  replay_repeat_check.py  replay_stability_runner.sh  rpl0_model_live_smoke.py  (+20 more)
tests/: test_demo_v4_region_attribution.py  test_demo_v5_evolution.py
tools/: __init__.py  rpl0_constants.py
(+275 files in other folders)
