[workspace]
# Multi-crate platform workspace. The public release boundary for the
# 1.x line is the deterministic replay infrastructure, not every workspace member.
members = [
    "crates/audit-float-boundary",
    "crates/dpw4",
    "crates/geom-signal",
    "crates/geom-spatial",
    "crates/replay-core",
    "crates/replay-embed",
    "crates/replay-host",
    "crates/replay-cli",
    "crates/replay-fw-f446",
    "crates/xtask",
]
default-members = [
    "crates/dpw4",
    "crates/geom-signal",
    "crates/geom-spatial",
    "crates/audit-float-boundary",
]
resolver = "2"

[workspace.package]
version = "1.7.0"
edition = "2021"
authors = ["Dan Elkins <dan.elkins@gmail.com>"]
license = "MIT"

[workspace.dependencies]
# Core arithmetic for bit-exact signal paths
fixed = "=1.30.0"

# Serialization logic used across CLI and artifacts
serde = "1.0"
serde_json = "1.0"

dpw4 = { path = "crates/dpw4" }
geom-signal = { path = "crates/geom-signal" }
geom-spatial = { path = "crates/geom-spatial" }

[profile.release]
codegen-units = 1
lto = "thin"
panic = "abort"
incremental = false
debug = 0
strip = "symbols"
overflow-checks = false
