[package]
name = "replay-fw-f446"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "NUCLEO-F446RE replay artifact capture MVP (TIM2 + USART2, PAC only)"

[features]
# Diagnostic-only ISR probe symbol for low-level debugger sessions.
# Not part of the canonical release/capture workflow.
debug-irq-count = []
# Diagnostic-only repeated post-capture artifact emission loop.
debug-repeat-dump = []
# Alternate bounded self-stimulus workload: deterministic irregular timing
# stimulus, with the same UART state line and index,interval_us CSV contract.
irregular-timing = []
# Demo-only execution divergence injector: perturbs one captured frame sample.
# Disabled by default and never part of normative baseline capture.
demo-divergence = []
# Demo-only persistent execution-state divergence injector: perturbs phase state
# once so all following samples remain shifted.
demo-persistent-divergence = []

[dependencies]
replay-core = { path = "../replay-core" }

[target.'cfg(all(target_arch = "arm", target_os = "none"))'.dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
panic-halt = "1.0"
stm32f4 = { version = "0.16", features = ["stm32f446", "rt"] }

[dev-dependencies]
sha2 = "0.10.9"
